<resources>
    <string name="app_name">HvZHub</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Sign in to HvZHub</string>
    <string name="beta_notice">Notice: This app is in Beta. In order to use it, you must first joined a game on HvZHub.com</string>

    <!-- Massive string of text - Used to test scrolling behavior. -->
    <string name="lorem_ipsum">
       Lorem ipsum dolor sit amet, et vim altera oporteat praesent, at doming iuvaret per. Quaerendum reprehendunt ut pro, ius omnium menandri honestatis cu. Usu in putent nostro, id omnes mentitum theophrastus sit. Vel an ipsum postea. Solum scriptorem qui ne, eu utamur vituperata his.\n\nNec at fierent molestie omittantur. At etiam persius sanctus cum, qui verear nominavi cu. Legere suscipiantur eos id, animal recusabo cu vis, delicata referrentur intellegebat et pri. Omittantur efficiantur et quo.\n\nEirmod quaeque cu sed, id atomorum consequuntur vel. Eu semper noluisse accusata qui. Ea mel sonet mediocritatem. Id discere inimicus vim, tamquam eleifend theophrastus ei vim, usu debitis officiis ne. Cum cu vide eruditi, expetenda corrumpit gubergren quo no. Simul impedit nusquam cu mei, brute laoreet cu sit, sed populo reformidans referrentur ea.\n\nEx omnium prodesset consetetur eos, eu vim justo comprehensam. Veri sanctus ei quo, at consul offendit duo, per no epicuri scaevola vituperatoribus. Vis odio nisl et, vis at graecis oporteat eloquentiam. Iisque lobortis nec ad, ea vel mandamus mediocrem. Ne populo percipit insolens usu, id nam omittam mentitum adipisci. Te feugait gloriatur pri.\n\nAffert maiestatis eu quo, congue vidisse est cu, fierent consulatu eu duo. Ea eos atomorum percipitur suscipiantur, duo ad vocent impedit, per suscipit convenire definitionem eu. Pro te dolore discere suavitate. Usu eu wisi homero, disputando complectitur ad pro. In nullam accusam quaerendum est, et dicit possit expetendis cum, wisi malorum aliquando cum in. Eam at amet rationibus, soluta putent ponderum sed ne.\n\nLorem ipsum dolor sit amet, et vim altera oporteat praesent, at doming iuvaret per. Quaerendum reprehendunt ut pro, ius omnium menandri honestatis cu. Usu in putent nostro, id omnes mentitum theophrastus sit. Vel an ipsum postea. Solum scriptorem qui ne, eu utamur vituperata his.\n\nNec at fierent molestie omittantur. At etiam persius sanctus cum, qui verear nominavi cu. Legere suscipiantur eos id, animal recusabo cu vis, delicata referrentur intellegebat et pri. Omittantur efficiantur et quo.\n\nEirmod quaeque cu sed, id atomorum consequuntur vel. Eu semper noluisse accusata qui. Ea mel sonet mediocritatem. Id discere inimicus vim, tamquam eleifend theophrastus ei vim, usu debitis officiis ne. Cum cu vide eruditi, expetenda corrumpit gubergren quo no. Simul impedit nusquam cu mei, brute laoreet cu sit, sed populo reformidans referrentur ea.\n\nEx omnium prodesset consetetur eos, eu vim justo comprehensam. Veri sanctus ei quo, at consul offendit duo, per no epicuri scaevola vituperatoribus. Vis odio nisl et, vis at graecis oporteat eloquentiam. Iisque lobortis nec ad, ea vel mandamus mediocrem. Ne populo percipit insolens usu, id nam omittam mentitum adipisci. Te feugait gloriatur pri.\n\nAffert maiestatis eu quo, congue vidisse est cu, fierent consulatu eu duo. Ea eos atomorum percipitur suscipiantur, duo ad vocent impedit, per suscipit convenire definitionem eu. Pro te dolore discere suavitate. Usu eu wisi homero, disputando complectitur ad pro. In nullam accusam quaerendum est, et dicit possit expetendis cum, wisi malorum aliquando cum in. Eam at amet rationibus, soluta putent ponderum sed ne.\n\nLorem ipsum dolor sit amet, et vim altera oporteat praesent, at doming iuvaret per. Quaerendum reprehendunt ut pro, ius omnium menandri honestatis cu. Usu in putent nostro, id omnes mentitum theophrastus sit. Vel an ipsum postea. Solum scriptorem qui ne, eu utamur vituperata his.\n\nNec at fierent molestie omittantur. At etiam persius sanctus cum, qui verear nominavi cu. Legere suscipiantur eos id, animal recusabo cu vis, delicata referrentur intellegebat et pri. Omittantur efficiantur et quo.\n\nEirmod quaeque cu sed, id atomorum consequuntur vel. Eu semper noluisse accusata qui. Ea mel sonet mediocritatem. Id discere inimicus vim, tamquam eleifend theophrastus ei vim, usu debitis officiis ne. Cum cu vide eruditi, expetenda corrumpit gubergren quo no. Simul impedit nusquam cu mei, brute laoreet cu sit, sed populo reformidans referrentur ea.\n\nEx omnium prodesset consetetur eos, eu vim justo comprehensam. Veri sanctus ei quo, at consul offendit duo, per no epicuri scaevola vituperatoribus. Vis odio nisl et, vis at graecis oporteat eloquentiam. Iisque lobortis nec ad, ea vel mandamus mediocrem. Ne populo percipit insolens usu, id nam omittam mentitum adipisci. Te feugait gloriatur pri.\n\nAffert maiestatis eu quo, congue vidisse est cu, fierent consulatu eu duo. Ea eos atomorum percipitur suscipiantur, duo ad vocent impedit, per suscipit convenire definitionem eu. Pro te dolore discere suavitate. Usu eu wisi homero, disputando complectitur ad pro. In nullam accusam quaerendum est, et dicit possit expetendis cum, wisi malorum aliquando cum in. Eam at amet rationibus, soluta putent ponderum sed ne.\n\nLorem ipsum dolor sit amet, et vim altera oporteat praesent, at doming iuvaret per. Quaerendum reprehendunt ut pro, ius omnium menandri honestatis cu. Usu in putent nostro, id omnes mentitum theophrastus sit. Vel an ipsum postea. Solum scriptorem qui ne, eu utamur vituperata his.\n\nNec at fierent molestie omittantur. At etiam persius sanctus cum, qui verear nominavi cu. Legere suscipiantur eos id, animal recusabo cu vis, delicata referrentur intellegebat et pri. Omittantur efficiantur et quo.\n\nEirmod quaeque cu sed, id atomorum consequuntur vel. Eu semper noluisse accusata qui. Ea mel sonet mediocritatem. Id discere inimicus vim, tamquam eleifend theophrastus ei vim, usu debitis officiis ne. Cum cu vide eruditi, expetenda corrumpit gubergren quo no. Simul impedit nusquam cu mei, brute laoreet cu sit, sed populo reformidans referrentur ea.\n\nEx omnium prodesset consetetur eos, eu vim justo comprehensam. Veri sanctus ei quo, at consul offendit duo, per no epicuri scaevola vituperatoribus. Vis odio nisl et, vis at graecis oporteat eloquentiam. Iisque lobortis nec ad, ea vel mandamus mediocrem. Ne populo percipit insolens usu, id nam omittam mentitum adipisci. Te feugait gloriatur pri.\n\nAffert maiestatis eu quo, congue vidisse est cu, fierent consulatu eu duo. Ea eos atomorum percipitur suscipiantur, duo ad vocent impedit, per suscipit convenire definitionem eu. Pro te dolore discere suavitate. Usu eu wisi homero, disputando complectitur ad pro. In nullam accusam quaerendum est, et dicit possit expetendis cum, wisi malorum aliquando cum in. Eam at amet rationibus, soluta putent ponderum sed ne.\n\nLorem ipsum dolor sit amet, et vim altera oporteat praesent, at doming iuvaret per. Quaerendum reprehendunt ut pro, ius omnium menandri honestatis cu. Usu in putent nostro, id omnes mentitum theophrastus sit. Vel an ipsum postea. Solum scriptorem qui ne, eu utamur vituperata his.\n\nNec at fierent molestie omittantur. At etiam persius sanctus cum, qui verear nominavi cu. Legere suscipiantur eos id, animal recusabo cu vis, delicata referrentur intellegebat et pri. Omittantur efficiantur et quo.\n\nEirmod quaeque cu sed, id atomorum consequuntur vel. Eu semper noluisse accusata qui. Ea mel sonet mediocritatem. Id discere inimicus vim, tamquam eleifend theophrastus ei vim, usu debitis officiis ne. Cum cu vide eruditi, expetenda corrumpit gubergren quo no. Simul impedit nusquam cu mei, brute laoreet cu sit, sed populo reformidans referrentur ea.\n\nEx omnium prodesset consetetur eos, eu vim justo comprehensam. Veri sanctus ei quo, at consul offendit duo, per no epicuri scaevola vituperatoribus. Vis odio nisl et, vis at graecis oporteat eloquentiam. Iisque lobortis nec ad, ea vel mandamus mediocrem. Ne populo percipit insolens usu, id nam omittam mentitum adipisci. Te feugait gloriatur pri.\n\nAffert maiestatis eu quo, congue vidisse est cu, fierent consulatu eu duo. Ea eos atomorum percipitur suscipiantur, duo ad vocent impedit, per suscipit convenire definitionem eu. Pro te dolore discere suavitate. Usu eu wisi homero, disputando complectitur ad pro. In nullam accusam quaerendum est, et dicit possit expetendis cum, wisi malorum aliquando cum in. Eam at amet rationibus, soluta putent ponderum sed ne.
    </string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter Tag Code</string>
    <string name="action_sign_in">Report Tag</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="Send">Send</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <!--Nav Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="loading">Loading…</string>
    <string name="report_tag">Report Tag</string>
    <string name="heatmap">Heatmap</string>
    <string name="my_code">My Code</string>
    <string name="news">News</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>

    <!--Network related error messages-->
    <string name="connection_timeout">Connection timed out.</string>
    <string name="connection_timeout_hint">Looks like HvZHub is down  :(</string>
    <string name="unexpected_response">Unexpected response from HvZHub.com</string>
    <string name="unexpected_response_hint">Contact the HvZHub.com dev team if this issue persists.</string>
    <string name="generic_connection_error">Error connecting to HvZHub.com</string>
    <string name="generic_connection_error_hint">Check your internet connection and try again</string>
    <string name="network_not_available">Unable to connect to the internet</string>
    <string name="network_not_available_hint">Check your internet connection and try again</string>
    <string name="title_activity_report_tag">Report Tag</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
