<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_forum"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_report_tag"
            android:icon="@drawable/ic_add"
            android:title="@string/report_tag" />
        <item
            android:id="@+id/nav_heatmap"
            android:icon="@drawable/ic_map"
            android:title="@string/heatmap" />
        <item
            android:id="@+id/nav_my_code"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_code" />
    </group>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
